# api/openapi/inspect.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 
 info:
   title: Inspect-state HTTP API for Cartesi Rollups
-  version: 0.6.0
+  version: 0.7.0
   license:
     name: Apache-2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
@@ -11,68 +11,27 @@ info:
     API that allows the DApp frontend to make inspect-state requests to the DApp backend.
 
 paths:
-  inspect/{dapp}/{payload}:
-    get:
-      operationId: inspect
-      summary: Inspect DApp state via GET
-      description: |
-        This method sends an inspect-state request to the DApp backend, passing the payload string in the URL.
-        The payload string should be URL-encoded; the inspect server will decode the string to UTF-8.
-        If the DApp frontend needs to pass a binary string to the backend then it is advised to use the POST method.
-
-        The response contains a status string and the reports generated by the DApp backend.
-        The status string can be either 'accept', 'reject', or 'exception'.
-        In case of exception, the field exception_payload will contain the exception payload;
-        Otherwise, this field will be null.
-
-        When running on machine mode, the whole Cartesi machine is rolled back after processing the inspect-state request.
-        On host mode, it is advised against changing the DApp backend state when processing an inspect-state request.
-        Notice that this method is synchronous, so it is not advised to be used for performing resource-intensive operations.
-
-      parameters:
-        - in: path
-          name: dapp
-          required: true
-          schema:
-            type: string
-        - in: path
-          name: payload
-          required: true
-          schema:
-            type: string
-
-      responses:
-        "200":
-          description: Inspect state response.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/InspectResult"
-
-        default:
-          description: Error response.
-          content:
-            text/plain:
-              schema:
-                $ref: "#/components/schemas/Error"
-
   inspect/{dapp}:
     post:
       operationId: inspect_post
       summary: Inspect DApp state via POST
       description: |
-        Differently from the GET method, the POST method sends an inspect-state request to the DApp backend by passing its payload in the request body.
-        The payload should be a binary.
-        Other than that, it behaves the same way as described in the GET method.
+        This POST method sends an inspect-state request to the DApp backend, using the body contents as a binary payload for the inspect method.
+
+        The response includes a status string and reports generated by the DApp backend. If an exception occurs, the `exception_payload` field will contain the exception details; otherwise, this field will be null.
+
+        The inspect operation is executed on a temporary fork of the machine created upon request arrival, which is discarded afterward. Note that this method is synchronous and not recommended for resource-intensive operations.
 
       parameters:
         - in: path
           name: dapp
+          description: dapp name or address
           required: true
           schema:
             type: string
 
       requestBody:
+        description: Binary payload
         content:
           application/octet-stream:
             schema:
